[package]
name = "dataplane-ebpf-common"

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
dataplane-common = { path = "../dataplane-common", default-features = false }

aya-ebpf = { workspace = true, default-features = false }
network-types = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }

[build-dependencies]
which = { workspace = true }
