[package]
name = "dataplane-ebpf-test-framework"

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
dataplane-common = { path = "../dataplane-common", default-features = false }
dataplane-common-test = { path = "../dataplane-common-test", default-features = false }

aya-ebpf = { workspace = true }
network-types = { workspace = true }
serde = { workspace = true }

[build-dependencies]
which = { workspace = true }
