[package]
name = "dataplane-test-runner"
publish = false

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
dataplane-common-test = { path = "../shared/dataplane-common-test", features = ["std"] }

aya = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
