[package]
name = "sarena-common-test"
publish = false

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["dep:aya", "dep:serde"]

[dependencies]
aya = { workspace = true, optional = true }
aya-ebpf = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
network-types = { workspace = true }
serde = { workspace = true, optional = true }
