[package]
name = "sarena-ebpf-common"

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
sarena-common = { path = "../sarena-common", default-features = false }

aya-ebpf = { workspace = true, default-features = false }
network-types = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }

[build-dependencies]
which = { workspace = true }
